--- a/Toast Notification/index.html
+++ b/Toast Notification/index.html
@@ -7,9 +7,7 @@
     <title>Toast Notification</title>
   </head>
   <body>
-    <div id="toasts">
-      <div>1</div>
-    </div>
+    <div id="toasts"></div>
 
     <button class="btn" id="button">Show Notification</button>
 
