add: github card with css

--- a/Github Profiles/index.html
+++ b/Github Profiles/index.html
@@ -8,7 +8,33 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <form class="user-form" id="form">
+    <input type="text" id="search" placeholder="Search a Github user">
+  </form>
+
+  <main id="main">
+    <div class="card">
+      <div>
+        <img src="https://randomuser.me/api/portraits/men/30.jpg" alt="photo" class="avatar">
+      </div>
+      <div class="user-info">
+        <h2>john</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, sint commodi tenetur pariatur qui, tempore aspernatur doloribus molestiae esse at quas quaerat? Cumque in molestias architecto at sit libero aliquid.</p>
+
+        <ul>
+          <li><strong>300</strong>Followers</li>
+          <li><strong>100</strong> Following</li>
+          <li><strong>30</strong> Repos</li>
+        </ul>
+
+        <div id="repos">
+          <a href="#" class="repos">repo 1</a>
+          <a href="#" class="repos">repo 2</a>
+          <a href="#" class="repos">repo 3</a>
+        </div>
+      </div>
+    </div>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
