feat: add js for fetching users

--- a/Github Profiles/index.html
+++ b/Github Profiles/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Github Profiles</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js" integrity="sha512-L4lHq2JI/GoKsERT8KYa72iCwfSrKYWEyaBxzJeeITM9Lub5vlTj8tufqYk056exhjo2QDEipJrg6zen/DDtoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
   <form class="user-form" id="form">
@@ -35,6 +36,6 @@
       </div>
     </div>
   </main>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
